--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nkzw/immutable-map",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Immutable Map",
   "license": "MIT",
   "homepage": "https://immutable-js.com",
@@ -58,8 +58,8 @@
     "build": "run-s build:*",
     "build-just-map": "npm run build && rm -rf ./publish && mkdir -p ./publish && cp dist/immutable.es.js publish/ImmutableMap.js && cp dist/immutable.d.ts publish/ImmutableMap.d.ts && cp package-publish.json publish/package.json && cp README.md publish/",
     "build:clean": "rimraf dist",
-    "build:dist": "rollup -c ./resources/rollup-config.js",
-    "build:esm": "rollup -c ./resources/rollup-config-es.js",
+    "build:dist": "rollup -c ./resources/rollup-config.mjs",
+    "build:esm": "rollup -c ./resources/rollup-config-es.mjs",
     "build:copy": "cpy ./type-definitions/immutable.* dist",
     "build:prepare": "./resources/prepare-dist.sh",
     "build:stats": "node ./resources/dist-stats.js",
@@ -104,16 +104,16 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rimraf": "2.7.1",
-    "rollup": "2.52.3",
+    "rollup": "3.29.3",
     "rollup-plugin-buble": "0.19.8",
-    "rollup-plugin-commonjs": "9.1.3",
-    "rollup-plugin-json": "3.0.0",
-    "rollup-plugin-strip-banner": "2.0.0",
+    "rollup-plugin-commonjs": "10.1.0",
+    "rollup-plugin-json": "4.0.0",
+    "rollup-plugin-strip-banner": "3.0.0",
     "transducers-js": "0.4.174",
     "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "^4.9",
-    "uglify-js": "3.11.1",
+    "typescript": "^5.2.2",
+    "uglify-js": "3.17.4",
     "uglify-save-license": "0.4.1"
   }
 }
